<resources>
    <string name="upgrade_url">http://rel8100.seven.com/get/client/dl.do?clientId=</string>
    <string name="account_authenticators">yahoo,msn,work</string>
    <string name="default_external_log_folder">/data/log/z7logs</string>
    <string name="prefs_email_default_path_value">Attachments</string>
    <string name="build_number">20080722-0001</string>
    <string name="account_setup_basics_domain_dialog_title">Select domain</string>
    <string name="account_setup_basics_choice_provider_for_skt_manual_input">Manual entry</string>
    <string name="account_setup_basics_at_label">" @ "</string>
    <string name="read_attachment_label">read Email attachments</string>
    <string name="permission_access_provider_label">Access email provider data</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments</string>
    <string name="permission_access_provider_desc">Allows application to access email database including received messages, sent messages, user names, and passwords</string>
    <string name="mailbox_name_server_inbox">Inbox</string>
    <string name="mailbox_name_server_outbox">Outbox</string>
    <string name="mailbox_name_server_drafts">Drafts</string>
    <string name="mailbox_name_server_trash">Trash</string>
    <string name="mailbox_name_server_sent">Sent</string>
    <string name="mailbox_name_server_junk">Junk</string>
    <string name="calendar_standarddateexceptyear">(?:(?:Ja\\w+|Fe\\w+|Ma\\w+|Ap\\w+|Ju\\w+|Au\\w+|Se\\w+|Oc\\w+|No\\w+|De\\w+)[\\.\\,]?[\\s][0-3]?[\\d](?:th|st|nd|rd|\\,)?)|(?:[0-3]?[\\d](?:th|st|nd|rd)?[\\s](?:Ja\\w+|Fe\\w+|Ma\\w+|Ap\\w+|Ju\\w+|Au\\w+|Se\\w+|Oc\\w+|No\\w+|De\\w+)[\\.\\,]?)</string>
    <string name="calendar_standarddate">(?:(?:Ja\\w+|Fe\\w+|Ma\\w+|Ap\\w+|Ju\\w+|Au\\w+|Se\\w+|Oc\\w+|No\\w+|De\\w+)[\\.\\,]?[\\s][0-3]?[\\d](?:th|st|nd|rd|\\,)?[\\s](?:[1-2]\\d\\d\\d))|(?:[0-3]?[\\d](?:th|st|nd|rd)?[\\s](?:Ja\\w+|Fe\\w+|Ma\\w+|Ap\\w+|Ju\\w+|Au\\w+|Se\\w+|Oc\\w+|No\\w+|De\\w+)[\\.\\,]?[\\s][1-2]\\d\\d\\d)</string>
    <string name="calendar_standardtime">(?:[0-2]?[\\d][\\:][0-6]?[\\d][\\s]?(?:\\:[0-6]?\\d)?[\\s]?(?:[aA][mM]|[pP][mM])?)|(?:[0-2]?[\\d][\\s]?(?:[aA][mM]|[pP][mM]))</string>
    <string name="calendar_keywordweek">[Ss]un[\\w\\.]{0,8}|[Mm]on[\\w\\.]{0,8}|[Tt]ue[\\w\\.]{0,8}|[Ww]ed[\\w\\.]{0,8}|[Tt]hu[\\w\\.]{0,8}|[Ff]ri[\\w\\.]{0,8}|[Ss]at[\\w\\.]{0,8}</string>
    <string name="calendar_keywordmoment">[Mm]orning|[Mm]orning|[Mm]orning|[Aa]fternoon|[Ee]vening|[Nn]ight</string>
    <string name="calendar_keywordspecial">[Tt]oday|[Tt]omorrow|[Tt]onight</string>
    <string name="calendar_localdate">z/z</string>
    <string name="calendar_localtime">z/z</string>
    <string name="calendar_localkeywordweek">z/z</string>
    <string name="calendar_localkeywordmoment">z/z</string>
    <string name="calendar_localkeywordspecial">z/z</string>
    <string name="calendar_localreplaceinput">|</string>
    <string name="calendar_localreplaceoutput">|</string>
    <string name="calendar_localreplaceconflictinput">|</string>
    <string name="calendar_localreplaceconflictoutput">|</string>
    <string name="pattern_location_localeng">z/z</string>
    <string name="pattern_location_locallang">z/z</string>
    <string name="debug_enable_debug_logging_label">Enable extra debug logging?</string>
    <string name="debug_enable_sensitive_logging_label">Enable sensitive information debug logging? (May show passwords in logs.)</string>
    <string name="cancel_action">Cancel</string>
    <string name="done_action">Done</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="forward_action">Forward</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="read_action">Mark as read</string>
    <string name="unread_action">Mark as unread</string>
    <string name="set_star_action">Add star</string>
    <string name="remove_star_action">Remove star</string>
    <string name="search_action">Search</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="refresh_action">Refresh</string>
    <string name="compose_action">Compose</string>
    <string name="new_meeting_invitation_action">New meeting invitation</string>
    <string name="folders_action">Folders</string>
    <string name="documents_action">Documents</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="move_action">Move</string>
    <string name="mailbox_settings_activity_title">Sync options</string>
    <string name="save_email_action">Save email</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="account_settings_default_summary">Send email from this account by default</string>
    <string name="account_settings_notify_label">Email notifications</string>
    <string name="account_settings_notify_summary">Notify in status bar when email arrives</string>
    <string name="account_settings_mail_check_frequency_label">Email check frequency</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_outgoing_label">Outgoing settings</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_notifications">Notification settings</string>
    <string name="account_settings_sync_email_enable">Sync Email</string>
    <string name="account_settings_sync_email_summary">Sync email for this account</string>
    <string name="account_settings_vibrate_when_label">Vibrate</string>
    <string name="account_settings_vibrate_when_summary">Also vibrate when email arrives</string>
    <string name="account_settings_vibrate_when_dlg_title">Vibrate</string>
    <string name="account_settings_ringtone">Select ringtone</string>
    <string name="account_settings_servers">Server settings</string>
    <string name="account_settings_signature_label">Signature</string>
    <string name="account_settings_sync_contacts_enable">Sync Contacts</string>
    <string name="account_settings_sync_contacts_summary">Also sync Contacts from this account</string>
    <string name="account_settings_sync_calendar_enable">Sync Calendar</string>
    <string name="account_settings_sync_calendar_summary">Also sync Calendar from this account</string>
    <string name="general_preference_auto_advance_label">Auto-advance</string>
    <string name="general_preference_auto_advance_summary">Select which screen to show after you delete a message</string>
    <string name="general_preference_auto_advance_dialog_title">Advance to</string>
    <string name="general_preference_preview_line_label">Message preview line</string>
    <string name="account_setup_options_mail_window_label">Period to sync Email</string>
    <string name="account_setting_conversation_mode_label">Conversation view filter</string>
    <string name="account_setting_conversation_mode_summary">Apply conversation view filter to account</string>
    <string name="account_settings_signature_default_value">Sent from Samsung mobile</string>
    <string name="list_by_action">Sort by</string>
    <string name="print_action">Print</string>
    <string name="bg_color_action">Display mode</string>
    <string name="account_settings_textpreview_label">Text Preview Size</string>
    <string name="font_size_action">Font size</string>
    <string name="account_settings_mail_email_size_label">Size to retrieve emails</string>
    <string name="account_settings_mail_empty_trash_label">Empty server trash</string>
    <string name="account_settings_mail_empty_trash_message">Delete contents in server trash?</string>
    <string name="account_settings_mail_empty_trash_positive">Yes</string>
    <string name="account_settings_mail_empty_trash_negative">No</string>
    <string name="remove_cc_bcc_action">Remove Cc/Bcc</string>
    <string name="view_mode_action">View mode</string>
    <string name="set_conversation_movealways_action">Set to MoveAlways</string>
    <string name="ignore_conversation_action">Ignore</string>
    <string name="restore_conversation_action">Restore</string>
    <string name="account_settings_sync_task_enable">Sync Tasks</string>
    <string name="account_settings_sync_task_summary">Sync Tasks from this account</string>
    <string name="account_settings_cc_bcc_label">Always Cc/Bcc myself</string>
    <string name="account_settings_cc_bcc_dlg_title">Always Cc/Bcc myself</string>
    <string name="account_settings_forward_with_files_label">Forward with files</string>
    <string name="account_settings_confirm_deletions_label">Confirm deletions</string>
    <string name="account_settings_add_signature_label">Add signature</string>
    <string name="follow_up_flag_option_title">Flag</string>
    <string name="priority">Priority</string>
    <string name="out_of_office_label">Out of office settings</string>
    <string name="rename_folder">Rename folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="create_folder">Create folder</string>
    <string name="account_settings_sync_schedule">Sync schedule</string>
    <string name="account_settings_sync_schedule_summary">Peak/Off-peak schedule control</string>
    <string name="account_setup_options_calendar_window_label">Period to sync Calendar</string>
    <string name="exchange_sync_settings">Exchange ActiveSync settings</string>
    <string name="sync_schedule">Sync schedule</string>
    <string name="while_roaming">While roaming</string>
    <string name="while_power_low">While power is low</string>
    <string name="push_service_common_settings">Push service common settings</string>
    <string name="account_settings_smime_installed_certificates_list">Email certificate</string>
    <string name="account_settings_smime_own_certificate_summary">Select certificate for S/MIME support</string>
    <string name="account_settings_smime_set_advanced_security_options_for_email">Set advanced email security options</string>
    <string name="sign">Sign</string>
    <string name="encrypt">Encrypt</string>
    <string name="account_settings_smime_sign_algorithm_label">Sign algorithm</string>
    <string name="account_settings_smime_encryption_algorithm_label">Encryption algorithm</string>
    <string name="account_settings_smime_security_options">Security options</string>
    <string name="account_settings_smime_encrypt_all_email">Encrypt all outgoing email</string>
    <string name="account_settings_smime_sign_all_email">Sign all outgoing email</string>
    <string name="account_settings_smime_security_policy_list">Security policy list</string>
    <string name="account_setting_sms_sync">Sync SMS</string>
    <string name="account_setting_sms_sync_summary_off">SMS sync off</string>
    <string name="account_settings_conflict_resolution_label">In case of sync conflict</string>
    <string name="remove_irm_protection">Remove IRM protection</string>
    <string name="permission">Permission</string>
    <string name="account_settings_receipts">Tracking options</string>
    <string name="account_settings_message_format_label">Message format</string>
    <string name="general_preference">General preference</string>
    <string name="message_compose_compose_to_me">Compose to me</string>
    <string name="account_settings_general_split_mode_label">Split view mode</string>
    <string name="account_settings_top_line_mode_label">Email Header</string>
    <string name="account_settings_top_line_mode_summary">Customize subject and sender line</string>
    <string name="account_settings_category_data_usage">Data usage</string>
    <string name="account_settings_auto_retry_time_label">Auto resend times</string>
</resources>