<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="account_setting_main"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="account_settings">
        <EditTextPreference android:maxLength="320" android:title="@string/account_settings_description_label" android:key="account_description" android:summary="" android:order="1" android:dialogTitle="@string/account_settings_description_label" android:inputType="textCapWords" />
        <EditTextPreference android:maxLength="320" android:title="@string/account_settings_name_label" android:key="account_name" android:summary="" android:order="2" android:dialogTitle="@string/account_settings_name_label" android:inputType="textPersonName|textCapWords" />
        <CheckBoxPreference android:title="@string/account_settings_add_signature_label" android:key="add_signature" android:summary="@string/account_settings_add_signature_label" android:order="3" android:defaultValue="true" />
        <EditTextPreference android:maxLines="1000" android:width="490.0dip" android:maxLength="1000" android:title="@string/account_settings_signature_label" android:key="account_signature" android:summary="" android:order="4" android:dependency="add_signature" android:defaultValue="@string/account_settings_signature_default_value" android:dialogTitle="@string/account_settings_signature_label" android:inputType="textCapSentences|textMultiLine" />
        <ListPreference android:entries="@array/account_settings_mail_window_entries_for_seven" android:title="@string/account_setup_options_mail_window_label" android:key="account_sync_period" android:order="7" android:dialogTitle="@string/account_setup_options_mail_window_label" android:entryValues="@array/account_settings_mail_window_values_for_seven" />
        <CheckBoxPreference android:title="@string/account_settings_default_label" android:key="account_default" android:summary="@string/account_settings_default_summary" android:order="8" />
        <ListPreference android:entries="@array/account_settings_cc_bcc_entries" android:title="@string/account_settings_cc_bcc_label" android:key="account_settings_cc_bcc" android:order="9" android:dialogTitle="@string/account_settings_cc_bcc_dlg_title" android:entryValues="@array/account_settings_cc_bcc_values" />
        <CheckBoxPreference android:title="@string/account_settings_forward_with_files_label" android:key="forward_with_files" android:order="10" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_category_data_usage" android:key="account_data_usage">
        <ListPreference android:entries="@array/account_settings_check_frequency_entries" android:title="@string/account_settings_mail_check_frequency_label" android:key="account_check_frequency" android:dialogTitle="@string/account_settings_mail_check_frequency_label" android:entryValues="@array/account_settings_check_frequency_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/exchange_sync_settings" android:key="account_exchange_sync_settings">
        <ListPreference android:entries="@array/account_settings_mail_window_entries" android:title="@string/account_setup_options_mail_window_label" android:key="email_window_size" android:order="1" android:dialogTitle="@string/account_setup_options_mail_window_label" android:entryValues="@array/account_settings_mail_window_values" />
        <com.android.email.activity.setup.EmptyTrashDialog android:title="@string/account_settings_mail_empty_trash_label" android:key="account_empty_trash" android:order="2" android:dialogTitle="@string/account_settings_mail_empty_trash_label" android:dialogMessage="@string/account_settings_mail_empty_trash_message" android:positiveButtonText="@string/account_settings_mail_empty_trash_positive" android:negativeButtonText="@string/account_settings_mail_empty_trash_negative" />
        <PreferenceScreen android:title="@string/account_settings_sync_schedule" android:key="account_sync_schedule" android:summary="@string/account_settings_sync_schedule_summary" android:order="3">
            <intent android:targetPackage="com.android.email" android:targetClass="com.android.email.activity.setup.SyncScheduleSettings" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/out_of_office_label" android:key="out_of_office" android:order="4" />
        <ListPreference android:title="@string/account_settings_mail_email_size_label" android:key="account_email_size" android:order="5" android:dialogTitle="@string/account_settings_mail_email_size_label" />
        <ListPreference android:entries="@array/account_settings_calendar_window_entries" android:title="@string/account_setup_options_calendar_window_label" android:key="calendar_window_size" android:order="6" android:dialogTitle="@string/account_setup_options_calendar_window_label" android:entryValues="@array/account_settings_calendar_window_values" />
        <PreferenceScreen android:title="@string/account_settings_smime_security_options" android:key="security_options" android:summary="@string/account_settings_smime_set_advanced_security_options_for_email" android:order="7">
            <intent android:targetPackage="com.android.email" android:targetClass="com.android.email.smime.SecurityPreference" />
        </PreferenceScreen>
        <EditTextPreference android:maxLength="3" android:title="@string/account_settings_textpreview_label" android:key="account_textpreview" android:summary="" android:order="8" android:dialogTitle="@string/account_settings_textpreview_label" android:inputType="number" />
        <ListPreference android:entries="@array/account_settings_ConflictResolution_entries" android:title="@string/account_settings_conflict_resolution_label" android:key="account_conflict" android:order="9" android:entryValues="@array/account_settings_ConflictResolution_values" />
        <ListPreference android:entries="@array/account_settings_message_format_entries" android:title="@string/account_settings_message_format_label" android:key="account_message_format" android:order="10" android:dialogTitle="@string/account_settings_message_format_label" android:entryValues="@array/account_settings_message_format_values" />
        <ListPreference android:entries="@array/account_settings_auto_retry_time_entries" android:title="@string/account_settings_auto_retry_time_label" android:key="account_auto_retry_times" android:order="11" android:dialogTitle="@string/account_settings_auto_retry_time_label" android:entryValues="@array/account_settings_auto_retry_time_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_notifications" android:key="account_notifications">
        <CheckBoxPreference android:title="@string/account_settings_notify_label" android:key="account_notify" android:summary="@string/account_settings_notify_summary" android:defaultValue="true" />
        <com.android.email.activity.setup.RingToneSelectDialog android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_ringtone" android:key="account_ringtone_select" android:dependency="account_notify" />
        <ListPreference android:entries="@array/account_settings_vibrate_when_entries" android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_vibrate_when_label" android:key="account_settings_vibrate_when" android:summary="@string/account_settings_vibrate_when_summary" android:dependency="account_notify" android:defaultValue="never" android:dialogTitle="@string/account_settings_vibrate_when_dlg_title" android:entryValues="@array/account_settings_vibrate_when_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_servers" android:key="account_servers">
        <PreferenceScreen android:title="@string/account_settings_incoming_label" android:key="incoming" />
        <PreferenceScreen android:title="@string/account_settings_outgoing_label" android:key="outgoing" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_sync_email_enable" android:key="account_sync_email" android:summary="@string/account_settings_sync_email_summary" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_sync_contacts_enable" android:key="account_sync_contacts" android:summary="@string/account_settings_sync_contacts_summary" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_sync_calendar_enable" android:key="account_sync_calendar" android:summary="@string/account_settings_sync_calendar_summary" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_sync_task_enable" android:key="account_sync_tasks" android:summary="@string/account_settings_sync_task_summary" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_setting_conversation_mode_label" android:key="account_conversation_mode" android:summary="@string/account_setting_conversation_mode_summary" android:defaultValue="false" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_setting_sms_sync" android:key="account_sms_sync" android:summary="@string/account_setting_sms_sync_summary_off" android:defaultValue="false" />
        <PreferenceScreen android:title="@string/account_settings_sync_contacts_enable" android:key="seven_sync_contacts" />
        <PreferenceScreen android:title="@string/account_settings_sync_calendar_enable" android:key="seven_sync_calendar" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/push_service_common_settings" android:key="seven_push_service_common_settings">
        <PreferenceScreen android:title="@string/sync_schedule" android:key="seven_sync_schedule" />
        <ListPreference android:entries="@array/use_sync_schedule_entries" android:title="@string/while_roaming" android:key="seven_while_roaming" android:summary="" android:order="2" android:defaultValue="none" android:dialogTitle="@string/while_roaming" android:entryValues="@array/use_sync_schedule_values" />
        <ListPreference android:entries="@array/use_sync_schedule_entries" android:title="@string/while_power_low" android:key="seven_while_power_low" android:summary="" android:order="3" android:defaultValue="none" android:dialogTitle="@string/while_power_low" android:entryValues="@array/use_sync_schedule_values" />
    </PreferenceCategory>
</PreferenceScreen>
