<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/compose" android:orderInCategory="200" android:title="@string/compose_action" android:showAsAction="ifRoom|withText" android:actionLayout="@layout/action_bar_button_compose_layout" />
    <item android:id="@id/refresh" android:orderInCategory="300" android:title="@string/refresh_action" android:alphabeticShortcut="r" />
    <item android:id="@id/search" android:orderInCategory="1000" android:title="@string/search_action" android:alphabeticShortcut="s" />
    <item android:id="@id/mailboxlist" android:orderInCategory="1100" android:title="@string/folders_action" android:alphabeticShortcut="s" />
    <group android:id="@id/deselect_list_group">
        <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/list_by" android:orderInCategory="2000" android:title="@string/list_by_action" />
    </group>
    <group android:id="@id/deselect_view_mode">
        <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/view_mode" android:orderInCategory="2100" android:title="@string/view_mode_action" />
    </group>
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/change_font_size" android:orderInCategory="2200" android:title="@string/font_size_action" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/new_meeting_invitation" android:orderInCategory="2300" android:title="@string/new_meeting_invitation_action" />
    <item android:id="@id/sync_option" android:orderInCategory="2400" android:title="@string/mailbox_settings_activity_title" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/documents" android:orderInCategory="2400" android:title="@string/documents_action" />
</menu>
