<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/delete" android:orderInCategory="100" android:title="@string/delete_action" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_delete_layout" />
    <item android:id="@id/move" android:orderInCategory="200" android:title="@string/move_action" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_move_layout" />
    <item android:id="@id/mark_read" android:orderInCategory="300" android:title="@string/read_action" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_read_layout" />
    <item android:id="@id/mark_unread" android:orderInCategory="400" android:title="@string/unread_action" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_unread_layout" />
    <item android:id="@id/add_star" android:orderInCategory="500" android:title="@string/set_star_action" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_favorite_layout" />
    <item android:id="@id/remove_star" android:orderInCategory="600" android:title="@string/remove_star_action" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_unfavorite_layout" />
    <item android:id="@id/follow_up_flag_active" android:orderInCategory="10" android:title="@string/follow_up_flag_option_title" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_follow_layout" />
    <item android:id="@id/follow_up_flag_complete" android:orderInCategory="10" android:title="@string/follow_up_flag_option_title" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_follow_layout" />
    <item android:id="@id/follow_up_flag_clear" android:orderInCategory="10" android:title="@string/follow_up_flag_option_title" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_follow_layout" />
    <item android:icon="@drawable/ic_menu_forward" android:id="@id/forward" android:title="@string/forward_action" android:showAsAction="always" />
    <item android:id="@id/conversation_movealways" android:orderInCategory="20" android:title="@string/set_conversation_movealways_action" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_conv_move_layout" />
    <item android:id="@id/conversation_ignore" android:orderInCategory="30" android:title="@string/ignore_conversation_action" android:showAsAction="always" android:actionLayout="@layout/action_bar_button_conv_ignore_layout" />
    <item android:icon="@drawable/ic_menu_conversation_restore" android:id="@id/conversation_restore" android:title="@string/restore_conversation_action" android:showAsAction="always" />
</menu>
